--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.3",
     "@reduxjs/toolkit": "^1.8.6",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
@@ -17,7 +19,9 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-elements": "^3.4.2",
-    "react-native-safe-area-context": "^4.4.1",
+    "react-native-gesture-handler": "2.5.0",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.4",
